# Raspberry-Pi-Pico-2W

./: CMakeLists.txt  README.md  Zsx.c
inc/: DynamentComms.h  ModbusComms.h  comms.h  halgpio.h
src/: CMakeLists.txt  DynamentComms.c  ModbusComms.c  comms.c  halgpio.c
